--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,4 +15,5 @@ syn = "2.0.23"
 clap = { version = "4.3.19", features = ["derive"] }
 comfy-table = "7.0.1"
 itertools = "0.11.0"
+once_cell = "1.18.0"
 rand = "0.8.5"
