--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ rand = "0.8.5"
 syn = "2.0.23"
 
 [dependencies]
+anyhow = "1.0.72"
 clap = { version = "4.3.19", features = ["derive"] }
 comfy-table = "7.0.1"
 itertools = "0.11.0"
